--- a/views/after-register.ejs
+++ b/views/after-register.ejs
@@ -32,7 +32,7 @@
         <div class="col-sm" style="background-color: antiquewhite;  border-style: solid; border-color: black; "><%= word3%></div>
       </div>
       <a href='/' class="btn btn-sm btn-secondary ">Back</a>
-      <a href='#' class="btn btn-sm btn-danger ">Proceed</a>
+      <a href='/main' class="btn btn-sm btn-danger ">Proceed</a>
     </div>
     
   </body>
