--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,20 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.88.1">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta
+      name="author"
+      content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
+    />
+    <meta name="generator" content="Hugo 0.88.1" />
     <title>Register</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/sign-in/">
+    <link
+      rel="canonical"
+      href="https://getbootstrap.com/docs/4.6/examples/sign-in/"
+    />
 
-    
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+      crossorigin="anonymous"
+    ></script>
 
     <style>
       .bd-placeholder-img {
@@ -33,26 +54,45 @@
       }
     </style>
 
-    
     <!-- Custom styles for this template -->
-    <link href="/css/register.css" rel="stylesheet">
+    <link href="/css/register.css" rel="stylesheet" />
   </head>
 
-<body class="text-center"> 
-<form class="form-signin" method="post" action="/register">
-  <img class="mb-4" src="/assets/bootstrap-solid.svg" alt="" width="72" height="72">
-  <h1 class="h3 mb-3 font-weight-normal">Register</h1>
-  <label for="inputEmail" class="sr-only" >Email address</label>
-  <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required autofocus>
-  <label for="inputPassword" class="sr-only" >Password</label>
-  <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-  
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-  <a href='/' class="btn btn-lg btn-danger btn-block">Back to Login</a>
-  <p class="mt-5 mb-3 text-muted">&copy; 2017-2021</p>
-</form>
+  <body class="text-center">
+    <form class="form-signin" method="post" action="/register">
+      <img
+        class="mb-4"
+        src="/assets/bootstrap-solid.svg"
+        alt=""
+        width="72"
+        height="72"
+      />
+      <h1 class="h3 mb-3 font-weight-normal">Register</h1>
+      <label for="inputEmail" class="sr-only">Email address</label>
+      <input
+        type="email"
+        id="inputEmail"
+        name="email"
+        class="form-control"
+        placeholder="Email address"
+        required
+        autofocus
+      />
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input
+        type="password"
+        id="inputPassword"
+        name="password"
+        class="form-control"
+        placeholder="Password"
+        required
+      />
 
-
-    
+      <button class="btn btn-lg btn-primary btn-block" type="submit">
+        Register
+      </button>
+      <a href="/" class="btn btn-lg btn-danger btn-block">Back to Login</a>
+      <p class="mt-5 mb-3 text-muted">&copy; 2017-2021</p>
+    </form>
   </body>
 </html>
