Finish with the create asset function without showing the three words features

--- a/views/create-asset-page.ejs
+++ b/views/create-asset-page.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create asset</title>
 
     <!-- Bootstrap core CSS -->
     <link
@@ -46,10 +46,10 @@
 
       <div>
         <form method="post" action="/create-asset" enctype="multipart/form-data">
-            <!-- <div class="form-group" >
+            <div class="form-group" >
                 <label for="uploadAsset">Upload</label>
-                <input type="file" class="form-control" id="uploadAsset" name="asset">
-              </div> -->
+                <input type="file" class="form-control" id="uploadAsset" name="assetImage">
+              </div>
 
             <div class="form-group" >
               <label for="nameInput">Name</label>
