Updated new Asset model with 4 new fields

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -84,6 +84,8 @@
         id="inputPassword"
         name="password"
         class="form-control"
+        minlength="8"
+        maxlength="16"
         placeholder="Password"
         required
       />
