--- a/views/create-asset-page.ejs
+++ b/views/create-asset-page.ejs
@@ -1,68 +1,146 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create asset</title>
-
-    <!-- Bootstrap core CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-      crossorigin="anonymous"
-    ></script>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Main</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Create assets <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Buy assetes</a>
-            </li>
-        </div>
-      </nav>
-
-
-      <div>
-        <form method="post" action="/create-asset" enctype="multipart/form-data">
-            <div class="form-group" >
-                <label for="uploadAsset">Upload</label>
-                <input type="file" class="form-control" id="uploadAsset" name="assetImage">
-              </div>
-
-            <div class="form-group" >
-              <label for="nameInput">Name</label>
-              <input type="text" class="form-control" id="nameInput" placeholder="name of asset" name="assetName">
-            </div>
-            
-            <div class="form-group">
-              <label for="descInput">Description</label>
-              <textarea class="form-control" id="descInput" rows="3"  placeholder="description of asset" name="assetDesc"></textarea>
-            </div>
-            <button class="btn btn-danger" type="submit"> Submit</button>
-          </form>
-      </div>
+  <!-- Header Partial -->
+  <%- include('partials/header'); %>
+  <body>
+    <style>
+      html {
+        position: relative;
+        min-height: 100%;
+      }
+      body {
+        background-color: lavenderblush;
+        margin-bottom: 100px;
+      }
+      body > nav > ul > li > a:hover {
+        color: cornflowerblue !important;
+      }
+      body
+        > div.footer
+        > div
+        > div.col-sm-12.bg-dark.justify-content-center.text-center.text-uppercase.font-weight-bold
+        > ul
+        > li
+        > a:hover {
+        color: cornflowerblue !important;
+      }
+      #dropdown:hover {
+        color: cornflowerblue !important;
+      }
+      body > nav > ul > ul > li > div > a:hover {
+        color: deepskyblue !important;
+      }
+      .container {
+        margin-top: 25px;
+      }
+      .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 60px;
+      }
+      .overlay {
+        opacity: 0.5;
+        background-color: black;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        z-index: 1000;
+      }
+      .whiteContainer {
+        position: fixed;
+        width: 500px;
+        height: 300px;
+        padding: 10px;
+        border: 3px solid black;
+        background-color: white;
+        border-radius: 25px;
+        top: 30%;
+        left: 50%;
+        margin-top: -100px;/* Negative half of height. */
+        margin-left: -250px;/* Negative half of width. */
+        z-index: 2000;
+      }
+      .center{
+        margin:auto
+      }
+      .threeWords{
+        background-color: antiquewhite;  
+        border-style: solid; 
+        border-color: black;
+      }
+    </style>
+    <!-- Heading-->
+    <div class="page-header">
+      <h1 style="text-align: center">Art Digital</h1>
+    </div>
+    <!-- Navbar Partial -->
+    <%- include('partials/navbar'); %>
     
-</body>
-</html>
+    <!-- Create Form-->
+    <div class="container">
+      <form method="post" action="/create-asset" enctype="multipart/form-data">
+        <div class="form-group">
+          <label for="file">File</label>
+          <input type="file" class="form-control" id="file" name="assetImage"/>
+        </div>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="name" name="assetName"/>
+        </div>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <textarea
+            class="form-control"
+            id="description"
+            rows="10"
+            name="assetDesc"
+          ></textarea>
+        </div>
+        <br />
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+  
+    
+  <!-- isDisplayed -->
+  <!-- securityWords -->
+  <!-- if isDisplayed is true -->
+  <%if(isDisplayed) {%>
+  <!-- Create Modal Start-->
+  <div class="overlay" id="close1"></div>
+    <div class="whiteContainer" id="close2">
+      <div class="modal-header">
+      <h4 class="modal-title">Security Words</h4>
+      </div>
+      <div class="center">
+        <div class="container" style="text-align: center;">
+          Please note down the secuirty words for this particular asset.
+          <div class="row">
+            <div class="col-sm threeWords"><%=word1%></div>
+            <div class="col-sm threeWords"><%=word2%></div>
+            <div class="col-sm threeWords"><%=word3%></div>
+          </div>
+          The system would not store the words explicitly.
+        </div>
+        <div style="margin-top: 20px;"></div>
+        <div class="row">
+          <button type="button" class="btn btn-danger" onclick="hideElements()" style="width: 40%; margin: auto;">
+            Finished
+          </button>
+        </div>
+      </div>
+    </div>
+    <% } %>
+    <script>
+      function hideElements() {
+        var confirmed = confirm("Are you sure? The three words would not be displayed again.");
+        if(confirmed){
+          document.getElementById("close1").style.display = "none";
+          document.getElementById("close2").style.display = "none";
+        }
+      }
+    </script>
+  <!-- Footer Partial -->
+  <%- include('partials/footer'); %>
+    
