--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -1,48 +1,177 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><Main></Main></title>
+  <!-- Header Partial -->
+  <%- include('partials/header'); %>
+  <body>
+    <style>
+      html {
+        position: relative;
+        min-height: 100%;
+      }
+      body {
+        background-color: lavenderblush;
+        margin-bottom: 100px;
+      }
 
-    <!-- Bootstrap core CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-      crossorigin="anonymous"
-    ></script>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Main</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/create-asset">Create assets <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Buy assetes</a>
-            </li>
-            
+      body > nav > ul > li > a:hover {
+        color: cornflowerblue !important;
+      }
+      body
+        > div.footer
+        > div
+        > div.col-sm-12.bg-dark.justify-content-center.text-center.text-uppercase.font-weight-bold
+        > ul
+        > li
+        > a:hover {
+        color: cornflowerblue !important;
+      }
+      .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 60px;
+      }
+    </style>
+    <div class="page-header">
+      <h1 style="text-align: center">Art Digital</h1>
+    </div>
+    <!-- Navbar Partial -->
+    <%- include('partials/navbar'); %>
+    <!-- Items Owned by Logged In User Items Include: Price, Name of Item, Description and Owner Name with "Sell Button"-->
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card" style="width: 400px">
+            <img class="card-img-top" src="artist.svg" style="width: 100%" />
+            <div class="card-body">
+              <h4>Name of File/Art</h4>
+              <p>Description</p>
+              <button
+                type="button"
+                class="btn btn-info btn-sm"
+                data-toggle="modal"
+                data-target="#sell"
+              >
+                Sell
+              </button>
+            </div>
+          </div>
         </div>
-      </nav>
-    
-</body>
-</html>
+        <!-- Other Example Items-->
+        <div class="col-sm-4">
+          <div class="card" style="width: 400px">
+            <img class="card-img-top" src="artist.svg" style="width: 100%" />
+            <div class="card-body">
+              <h4>Name of File/Art</h4>
+              <p>Description</p>
+              <button
+                type="button"
+                class="btn btn-info btn-sm"
+                data-toggle="modal"
+                data-target="#sell"
+              >
+                Sell
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card" style="width: 400px">
+            <img class="card-img-top" src="artist.svg" style="width: 100%" />
+            <div class="card-body">
+              <h4>Name of File/Art</h4>
+              <p>Description</p>
+              <button
+                type="button"
+                class="btn btn-info btn-sm"
+                data-toggle="modal"
+                data-target="#sell"
+              >
+                Sell
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card" style="width: 400px">
+            <img class="card-img-top" src="artist.svg" style="width: 100%" />
+            <div class="card-body">
+              <h4>Name of File/Art</h4>
+              <p>Description</p>
+              <button
+                type="button"
+                class="btn btn-info btn-sm"
+                data-toggle="modal"
+                data-target="#sell"
+              >
+                Sell
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card" style="width: 400px">
+            <img class="card-img-top" src="artist.svg" style="width: 100%" />
+            <div class="card-body">
+              <h4>Name of File/Art</h4>
+              <p>Description</p>
+              <button
+                type="button"
+                class="btn btn-info btn-sm"
+                data-toggle="modal"
+                data-target="#sell"
+              >
+                Sell
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card" style="width: 400px">
+            <img class="card-img-top" src="artist.svg" style="width: 100%" />
+            <div class="card-body">
+              <h4>Name of File/Art</h4>
+              <p>Description</p>
+              <button
+                type="button"
+                class="btn btn-info btn-sm"
+                data-toggle="modal"
+                data-target="#sell"
+              >
+                Sell
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal Start-->
+    <div class="modal fade" id="sell" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+            <h4 class="modal-title">Sell Item</h4>
+          </div>
+          <!-- Modal Content-->
+          <div class="modal-body">
+            <form action="sell.php">
+              <label for="price">List Price:</label>
+              <input type="number" id="price" name="price" /><br /><br />
+              <label for="fword">First Word:</label>
+              <input type="text" id="fword" name="fword" /><br /><br />
+              <label for="sword">Second Word:</label>
+              <input type="text" id="sword" name="sword" /><br /><br />
+              <label for="twords">Third Word:</label>
+              <input type="text" id="tword" name="tword" /><br /><br />
+              <input type="submit" value="Confirm" />
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer Partial -->
+    <%- include('partials/footer'); %>
