--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,9 +26,7 @@ class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center"
       Placeholder 
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdown">
-        <a class="dropdown-item" href="#">Home</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Logout</a>
+        <a class="dropdown-item" href="/logout">Logout</a>
       </div>
     </li>
   </ul>
