--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -1,178 +1,102 @@
-  <!-- Header Partial -->
-  <%- include('partials/header'); %>
-</head>
-  <body>
-    <style>
-      html {
-        position: relative;
-        min-height: 100%;
-      }
-      body {
-        background-color: lavenderblush;
-        margin-bottom: 100px;
-      }
+<!-- Header Partial -->
+<%- include('partials/header'); %>
+    </head>
 
-      body > nav > ul > li > a:hover {
-        color: cornflowerblue !important;
-      }
-      body
-        > div.footer
-        > div
-        > div.col-sm-12.bg-dark.justify-content-center.text-center.text-uppercase.font-weight-bold
-        > ul
-        > li
-        > a:hover {
-        color: cornflowerblue !important;
-      }
-      .footer {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 60px;
-      }
-    </style>
-    <div class="page-header">
-      <h1 style="text-align: center">Art Digital</h1>
-    </div>
-    <!-- Navbar Partial -->
-    <%- include('partials/navbar'); %>
-    <!-- Items Owned by Logged In User Items Include: Price, Name of Item, Description and Owner Name with "Sell Button"-->
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="card" style="width: 400px">
-            <img class="card-img-top" src="artist.svg" style="width: 100%" />
-            <div class="card-body">
-              <h4>Name of File/Art</h4>
-              <p>Description</p>
-              <button
-                type="button"
-                class="btn btn-info btn-sm"
-                data-toggle="modal"
-                data-target="#sell"
-              >
-                Sell
-              </button>
-            </div>
-          </div>
+    <body>
+        <style>
+            html {
+                position: relative;
+                min-height: 100%;
+            }
+            
+            body {
+                background-color: lavenderblush;
+                margin-bottom: 100px;
+            }
+            
+            body>nav>ul>li>a:hover {
+                color: cornflowerblue !important;
+            }
+            
+            body>div.footer>div>div.col-sm-12.bg-dark.justify-content-center.text-center.text-uppercase.font-weight-bold>ul>li>a:hover {
+                color: cornflowerblue !important;
+            }
+            
+            .footer {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                height: 60px;
+            }
+        </style>
+        <script>
+            $(function() {
+                $('#sell').on('show.bs.modal', function(event) {
+                    var button = $(event.relatedTarget);
+                    var data = button.data('assetid');
+                    $('#assetid').val(data);
+                });
+            });
+        </script>
+        <div class="page-header">
+            <h1 style="text-align: center">Art Digital</h1>
         </div>
-        <!-- Other Example Items-->
-        <div class="col-sm-4">
-          <div class="card" style="width: 400px">
-            <img class="card-img-top" src="artist.svg" style="width: 100%" />
-            <div class="card-body">
-              <h4>Name of File/Art</h4>
-              <p>Description</p>
-              <button
-                type="button"
-                class="btn btn-info btn-sm"
-                data-toggle="modal"
-                data-target="#sell"
-              >
-                Sell
+        <!-- Navbar Partial -->
+        <%- include('partials/navbar'); %>
+            <!-- Items Owned by Logged In User Items Include: Price, Name of Item, Description and Owner Name with "Sell Button"-->
+            <div class="container">
+                <div class="row">
+                    <% if(Assets != null) { %>
+                        <% for(var i = 0; i < Assets.length; i++) { %>
+                            <div class="col-sm-4">
+                                <div class="card" style="width: 400px">
+                                    <img class="card-img-top" src="uploads/images/<%=Assets[i]['asset']%>" style="width: 100%" />
+                                    <div class="card-body">
+                                        <h4>Name:
+                                            <%=Assets[i]['asset_name']%>
+                                        </h4>
+                                        <p>Description:
+                                            <%=Assets[i]['asset_desc']%>
+                                        </p>
+                                        <button type="button" class="btn btn-info btn-sm w-100" data-toggle="modal" data-target="#sell" data-assetid="<%=Assets[i]['_id']%>">
+                <%if (Assets[i]['price'] > 0 && Assets[i]['for_sell'] == true) {%> Resell <% } else { %> Sell  <% } %>
               </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <% } %>
+                                <% } %>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card" style="width: 400px">
-            <img class="card-img-top" src="artist.svg" style="width: 100%" />
-            <div class="card-body">
-              <h4>Name of File/Art</h4>
-              <p>Description</p>
-              <button
-                type="button"
-                class="btn btn-info btn-sm"
-                data-toggle="modal"
-                data-target="#sell"
-              >
-                Sell
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card" style="width: 400px">
-            <img class="card-img-top" src="artist.svg" style="width: 100%" />
-            <div class="card-body">
-              <h4>Name of File/Art</h4>
-              <p>Description</p>
-              <button
-                type="button"
-                class="btn btn-info btn-sm"
-                data-toggle="modal"
-                data-target="#sell"
-              >
-                Sell
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card" style="width: 400px">
-            <img class="card-img-top" src="artist.svg" style="width: 100%" />
-            <div class="card-body">
-              <h4>Name of File/Art</h4>
-              <p>Description</p>
-              <button
-                type="button"
-                class="btn btn-info btn-sm"
-                data-toggle="modal"
-                data-target="#sell"
-              >
-                Sell
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card" style="width: 400px">
-            <img class="card-img-top" src="artist.svg" style="width: 100%" />
-            <div class="card-body">
-              <h4>Name of File/Art</h4>
-              <p>Description</p>
-              <button
-                type="button"
-                class="btn btn-info btn-sm"
-                data-toggle="modal"
-                data-target="#sell"
-              >
-                Sell
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Modal Start-->
-    <div class="modal fade" id="sell" role="dialog">
-      <div class="modal-dialog">
-        <!-- Modal content-->
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">
+            <!-- Modal Start-->
+            <div class="modal fade" id="sell" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">
               &times;
             </button>
-            <h4 class="modal-title">Sell Item</h4>
-          </div>
-          <!-- Modal Content-->
-          <div class="modal-body">
-            <form action="sell.php">
-              <label for="price">List Price:</label>
-              <input type="number" id="price" name="price" /><br /><br />
-              <label for="fword">First Word:</label>
-              <input type="text" id="fword" name="fword" /><br /><br />
-              <label for="sword">Second Word:</label>
-              <input type="text" id="sword" name="sword" /><br /><br />
-              <label for="twords">Third Word:</label>
-              <input type="text" id="tword" name="tword" /><br /><br />
-              <input type="submit" value="Confirm" />
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Footer Partial -->
-    <%- include('partials/footer'); %>
+                            <h4 class="modal-title">Sell Item</h4>
+                        </div>
+                        <!-- Modal Content-->
+                        <div class="modal-body">
+                            <form action="sell" method="post">
+                                <label for="price">List Price:</label>
+                                <input type="number" id="price" name="price" /><br /><br />
+                                <label for="fword">First Word:</label>
+                                <input type="text" id="fword" name="fword" /><br /><br />
+                                <label for="sword">Second Word:</label>
+                                <input type="text" id="sword" name="sword" /><br /><br />
+                                <label for="twords">Third Word:</label>
+                                <input type="text" id="tword" name="tword" /><br /><br />
+                                <input type="submit" value="Confirm" />
+                                <input type="hidden" id="assetid" name="assetid">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Footer Partial -->
+            <%- include('partials/footer'); %>
