--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -48,7 +48,7 @@
                 <div class="row">
                     <% if(Assets != null) { %>
                         <% for(var i = 0; i < Assets.length; i++) { %>
-                            <div class="col-sm-4">
+                            <div class="col-sm-4" style="margin-bottom: 3%;margin-top: 1%;">
                                 <div class="card" style="width: 400px">
                                     <img class="card-img-top" src="uploads/images/<%=Assets[i]['asset']%>" style="width: 100%" />
                                     <div class="card-body">
@@ -57,6 +57,9 @@
                                         </h4>
                                         <p>Description:
                                             <%=Assets[i]['asset_desc']%>
+                                        </p>
+                                        <p>Created Date:
+                                            <%=Assets[i]['created_date']%>
                                         </p>
                                         <button type="button" class="btn btn-info btn-sm w-100" data-toggle="modal" data-target="#sell" data-assetid="<%=Assets[i]['_id']%>">
                 <%if (Assets[i]['price'] > 0 && Assets[i]['for_sell'] == true) {%> Resell <% } else { %> Sell  <% } %>
