--- a/views/buy-confrim.ejs
+++ b/views/buy-confrim.ejs
@@ -31,7 +31,7 @@
         <div class="col-sm" style="background-color: antiquewhite;  border-style: solid; border-color: black; "><%= word2%></div>
         <div class="col-sm" style="background-color: antiquewhite;  border-style: solid; border-color: black; "><%= word3%></div>
       </div>
-      <a href='/' class="btn btn-sm btn-secondary ">Done</a>
+      <a href='/main' class="btn btn-sm btn-secondary ">Done</a>
     </div>
     
   </body>
