update with forget password function

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,6 +49,7 @@
   
   <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
   <a href='/register' class="btn btn-lg btn-danger btn-block">Register</a>
+  <a href='/forget-password' class="btn btn-lg btn-warning btn-block">Forget Password</a>
   <p class="mt-5 mb-3 text-muted">&copy; 2017-2021</p>
 </form>
 
