--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -42,7 +42,39 @@
             <h1 style="text-align: center">Art Digital</h1>
         </div>
         <!-- Navbar Partial -->
-        <%- include('partials/navbar'); %>
+        <nav
+            class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center"
+            >
+            <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/main">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/create-asset">Create</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Buy</a>
+            </li>
+            <ul class="mr-auto">
+                <li class="nav-item dropdown">
+                <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="dropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                >
+                Placeholder 
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdown">
+                    <a class="dropdown-item" href="/logout">Logout</a>
+                </div>
+                </li>
+            </ul>
+            </ul>
+            </nav>
             <!-- Items Owned by Logged In User Items Include: Price, Name of Item, Description and Owner Name with "Sell Button"-->
             <div class="container">
                 <div class="row">
