--- a/views/create-asset-page.ejs
+++ b/views/create-asset-page.ejs
@@ -87,7 +87,7 @@
                 <a class="nav-link" href="/create-asset">Create</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Buy</a>
+                <a class="nav-link" href="/buy">Buy</a>
             </li>
             <ul class="mr-auto">
                 <li class="nav-item dropdown">
