--- a/views/buy-confrim.ejs
+++ b/views/buy-confrim.ejs
@@ -1,38 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Bootstrap core CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-      crossorigin="anonymous"
-    ></script>
-    <title>Confirm</title>
-  </head>
-  <body>
-    <div class="container" style="margin-top: 100px;text-align: center;">
-        <p> Please note down the following three words, the system would not explictly store the recovery words for you</p>
-      <div class="row" style="padding-bottom: 5%;">
-        <div class="col-sm" style="background-color: antiquewhite;  border-style: solid; border-color: black; "><%= word1%></div>
-        <div class="col-sm" style="background-color: antiquewhite;  border-style: solid; border-color: black; "><%= word2%></div>
-        <div class="col-sm" style="background-color: antiquewhite;  border-style: solid; border-color: black; "><%= word3%></div>
-      </div>
-      <a href='/main' class="btn btn-sm btn-secondary ">Done</a>
-    </div>
+<!-- Header Partial -->
+<%- include('partials/header'); %>
+	<title>Confirm</title>
+    </head>
+
+    <body>
+        <style>
+            html {
+                position: relative;
+                min-height: 100%;
+            }
+            
+            body {
+                background-color: lavenderblush;
+                margin-bottom: 100px;
+            }
+            
+            body>nav>ul>li>a:hover {
+                color: cornflowerblue !important;
+            }
+            
+            body>div.footer>div>div.col-sm-12.bg-dark.justify-content-center.text-center.text-uppercase.font-weight-bold>ul>li>a:hover {
+                color: cornflowerblue !important;
+            }
+            
+            .footer {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                height: 60px;
+            }
+        </style>
+        <div class="page-header">
+            <h1 style="text-align: center">Art Digital</h1>
+        </div>
+        <!-- Navbar Partial -->
+        <nav
+            class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center"
+            >
+            <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/main">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/create-asset">Create</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/buy">Buy</a>
+            </li>
+            <ul class="mr-auto">
+                <li class="nav-item dropdown">
+                <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="dropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                >
+                Placeholder 
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdown">
+                    <a class="dropdown-item" href="/logout">Logout</a>
+                </div>
+                </li>
+            </ul>
+            </ul>
+            </nav>
+            <!-- Items Owned by Logged In User Items Include: Price, Name of Item, Description and Owner Name with "Sell Button"-->
+            <body>
+			<div class="container" style="margin-top: 100px;text-align: center;">
+				<p> Please note down the following three words, the system would not explictly store the recovery words for you</p>
+			  <div class="row" style="padding-bottom: 5%;">
+				<div class="col-sm" style="background-color: antiquewhite;  border-style: solid; border-color: black; "><%= word1%></div>
+				<div class="col-sm" style="background-color: antiquewhite;  border-style: solid; border-color: black; "><%= word2%></div>
+				<div class="col-sm" style="background-color: antiquewhite;  border-style: solid; border-color: black; "><%= word3%></div>
+			  </div>
+			  <a href='/main' class="btn btn-sm btn-danger ">Done</a>
+			</div>
     
-  </body>
-</html>
+            <!-- Footer Partial -->
+            <%- include('partials/footer'); %>
