--- a/views/buy-detail.ejs
+++ b/views/buy-detail.ejs
@@ -1,24 +1,143 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buy detail</title>
-  </head>
+      
+  <!-- Header Partial -->
+  <%- include('partials/header'); %>
+  <title>Buy</title>
+</head>
   <body>
-    <div>
-      <div>
-        <div><%= result.asset_name%></div>
-        <div><%= result.asset_desc%></div>
-        <div><%= result.created_date%></div>
-		<div><%= result.price%></div>
-		<div><img src="../uploads/images/<%= result.asset%>"></div>
-      </div>
+    <style>
+      html {
+        position: relative;
+        min-height: 100%;
+      }
+      body {
+        background-color: lavenderblush;
+        margin-bottom: 100px;
+      }
+      body > nav > ul > li > a:hover {
+        color: cornflowerblue !important;
+      }
+      body
+        > div.footer
+        > div
+        > div.col-sm-12.bg-dark.justify-content-center.text-center.text-uppercase.font-weight-bold
+        > ul
+        > li
+        > a:hover {
+        color: cornflowerblue !important;
+      }
+      #dropdown:hover {
+        color: cornflowerblue !important;
+      }
+      body > nav > ul > ul > li > div > a:hover {
+        color: deepskyblue !important;
+      }
+      .container {
+        margin-top: 25px;
+      }
+      .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 60px;
+      }
+      .overlay {
+        opacity: 0.5;
+        background-color: black;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        z-index: 1000;
+      }
+      .whiteContainer {
+        position: fixed;
+        width: 500px;
+        height: 300px;
+        padding: 10px;
+        border: 3px solid black;
+        background-color: white;
+        border-radius: 25px;
+        top: 30%;
+        left: 50%;
+        margin-top: -100px;/* Negative half of height. */
+        margin-left: -250px;/* Negative half of width. */
+        z-index: 2000;
+      }
+      .center{
+        margin:auto
+      }
+      .threeWords{
+        background-color: antiquewhite;  
+        border-style: solid; 
+        border-color: black;
+      }
+    </style>
+    <!-- Heading-->
+    <div class="page-header">
+      <h1 style="text-align: center">Art Digital</h1>
+    </div>
+    <!-- Navbar Partial -->
+    <nav
+            class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center"
+            >
+            <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/main">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/create-asset">Create</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/buy">Buy</a>
+            </li>
+            <ul class="mr-auto">
+                <li class="nav-item dropdown">
+                <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="dropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                >
+                Placeholder 
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdown">
+                    <a class="dropdown-item" href="/logout">Logout</a>
+                </div>
+                </li>
+            </ul>
+            </ul>
+      </nav>
+    
+    <!-- Create Form-->
+    <div class="container">
+      <div class="row mb-3 align-items-center">
+	    <div class="col-6">
+          <div><span>Asset Name:</span> <%= result.asset_name%></div><br>
+	      <div><span>Price:</span> <%= result.price%></div><br>
+          <div><span>Created Date:</span> <%= result.created_date%></div>
+		</div>
+	    <div class="col-6 text-center"><img src="../uploads/images/<%= result.asset%>"></div>
+	  </div>
+	  <div class="my-3">
+	    <span>Description:<span>
+        <textarea readonly
+        class="form-control"
+        id="description"
+        rows="8"
+        name="assetDesc"
+        ><%= result.asset_desc%></textarea>
+	  </div>
+	  
 	  <form action="confirm" method="post">
 	    <input type="hidden" name="assetid" value=<%= assetid%>>
-	    <input type="submit" value="Buy now">
+	    <input type="submit" class="btn btn-primary" value="Buy now">
 	  </form>
     </div>
-  </body>
-</html>
+  
+   
+  <!-- Footer Partial -->
+  <%- include('partials/footer'); %>
