--- a/views/buy.ejs
+++ b/views/buy.ejs
@@ -1,5 +1,6 @@
 <!-- Header Partial -->
 <%- include('partials/header'); %>
+	<title>Buy</title>
     </head>
 
     <body>
@@ -29,15 +30,6 @@
                 height: 60px;
             }
         </style>
-        <script>
-            $(function() {
-                $('#sell').on('show.bs.modal', function(event) {
-                    var button = $(event.relatedTarget);
-                    var data = button.data('assetid');
-                    $('#assetid').val(data);
-                });
-            });
-        </script>
         <div class="page-header">
             <h1 style="text-align: center">Art Digital</h1>
         </div>
@@ -93,46 +85,14 @@
                                         <p>Created Date:
                                             <%=Assets[i]['created_date']%>
                                         </p>
-                                        <button type="button" class="btn btn-info btn-sm w-100" data-toggle="modal" data-target="#sell" data-assetid="<%=Assets[i]['_id']%>">
-                <%if (Assets[i]['price'] > 0 && Assets[i]['for_sell'] == true) {%> Resell <% } else { %> Sell  <% } %>
-              </button>
+                                        <a class="btn btn-info btn-sm w-100" href="buy/<%=Assets[i]['_id']%>">
+										Buy
+										</a>
                                     </div>
                                 </div>
                             </div>
                             <% } %>
                                 <% } %>
-                </div>
-            </div>
-
-            <!-- Modal Start-->
-            <div class="modal fade" id="sell" role="dialog">
-                <div class="modal-dialog">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">
-              &times;
-            </button>
-                            <h4 class="modal-title">Sell Item</h4>
-                        </div>
-                        <!-- Modal Content-->
-                        <div class="modal-body">
-                            <form action="sell" method="post">
-                                <label for="price">List Price:</label>
-                                <input type="number" id="price" name="price" /><br /><br />
-
-                                <label for="fword">First Word:</label>
-                                <input type="text" id="fword" name="fword" /><br /><br />
-                                <label for="sword">Second Word:</label>
-                                <input type="text" id="sword" name="sword" /><br /><br />
-                                <label for="twords">Third Word:</label>
-                                <input type="text" id="tword" name="tword" /><br /><br />
-                                
-                                <input type="submit" value="Confirm" />
-                                <input type="hidden" id="assetid" name="assetid">
-                            </form>
-                        </div>
-                    </div>
                 </div>
             </div>
             <!-- Footer Partial -->
