--- a/views/register.ejs
+++ b/views/register.ejs
@@ -73,6 +73,17 @@
         placeholder="Password"
         required
       />
+      <label for="reEnteredPassword" class="sr-only">Re-enter Password</label>
+      <input
+        type="password"
+        id="reEnteredPassword"
+        name="reEnteredPassword"
+        class="form-control"
+        minlength="8"
+        maxlength="16"
+        placeholder="Re-enter Password"
+        required
+      />
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Register
