--- a/views/buy-detail.ejs
+++ b/views/buy-detail.ejs
@@ -120,7 +120,7 @@
 	      <div><span>Price:</span> <%= result.price%></div><br>
           <div><span>Created Date:</span> <%= result.created_date%></div>
 		</div>
-	    <div class="col-6 text-center"><img src="../uploads/images/<%= result.asset%>"></div>
+	    <div class="col-6 text-center"><img src="../uploads/images/<%= result.asset%>" style="width: 500px;" ></div>
 	  </div>
 	  <div class="my-3">
 	    <span>Description:<span>
