--- a/views/buy.ejs
+++ b/views/buy.ejs
@@ -29,6 +29,11 @@
                 width: 100%;
                 height: 60px;
             }
+            img {
+                width:  700px;
+                height: 400px;
+                object-fit: cover;
+            }
         </style>
         <div class="page-header">
             <h1 style="text-align: center">Art Digital</h1>
