--- a/views/create-asset-page.ejs
+++ b/views/create-asset-page.ejs
@@ -77,38 +77,38 @@
     </div>
     <!-- Navbar Partial -->
     <nav
-            class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center"
-            >
-            <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/main">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/create-asset">Create</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/buy">Buy</a>
-            </li>
-            <ul class="mr-auto">
-                <li class="nav-item dropdown">
-                <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="dropdown"
-                    role="button"
-                    data-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                >
-                Placeholder 
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdown">
-                    <a class="dropdown-item" href="/logout">Logout</a>
-                </div>
-                </li>
-            </ul>
-            </ul>
-      </nav>
+    class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center"
+    >
+    <ul class="nav navbar-nav">
+    <li class="nav-item">
+        <a class="nav-link" href="/main">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/create-asset">Create</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/buy">Buy</a>
+    </li>
+    <ul class="mr-auto">
+        <li class="nav-item dropdown">
+        <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="dropdown"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+        >
+        Placeholder 
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdown">
+            <a class="dropdown-item" href="/logout">Logout</a>
+        </div>
+        </li>
+    </ul>
+    </ul>
+    </nav>
     
     <!-- Create Form-->
     <div class="container">
@@ -116,7 +116,7 @@
         <div class="form-group">
           <label for="file">File</label>
           <input type="file" class="form-control" id="file" name="assetImage" onchange="loadFile(event)"/>
-          <img id="output"/ style="display: block;margin-top:30px;margin-left: auto;margin-right: auto;width: 50%;">
+          <img id="output" style="display: block;margin-top:30px;margin-left: auto;margin-right: auto;width: 50%;">
         </div>
         <script>
           var loadFile = function(event) {
