final version 2 with improved console logs and small modifications

--- a/views/forget-password.ejs
+++ b/views/forget-password.ejs
@@ -131,6 +131,18 @@
         maxlength="16"
         required
       />
+      <div style="margin-top: 10px"></div>
+      <label for="repeatPassword" class="sr-only">Repeat password</label>
+      <input
+        type="password"
+        name="repeatPassword"
+        id="repeatPassword"
+        class="form-control"
+        placeholder="Repeat password"
+        minlength="8"
+        maxlength="16"
+        required
+      />
       <div style="margin-top: 30px"></div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Validate
