final version 3 with improved text formatting

--- a/views/forget-password.ejs
+++ b/views/forget-password.ejs
@@ -132,7 +132,7 @@
         required
       />
       <div style="margin-top: 10px"></div>
-      <label for="repeatPassword" class="sr-only">Repeat password</label>
+      <label for="repeatPassword" class="sr-only">Re-enter password</label>
       <input
         type="password"
         name="repeatPassword"
