--- a/views/buy.ejs
+++ b/views/buy.ejs
@@ -53,7 +53,11 @@
                                             <%=Assets[i]['asset_name']%>
                                         </h4>
                                         <p>Description:
-                                            <%=Assets[i]['asset_desc']%>
+                                            <% if(String(Assets[i]['asset_desc']).length < 30){ %> 
+                                                <%=Assets[i]['asset_desc']%>
+                                            <% } else {%>
+                                                <%=String(Assets[i]['asset_desc']).substring(0, 29)+"..."%>
+                                            <%}%>
                                         </p>
                                         <p>Created Date:
                                             <%=Assets[i]['created_date']%>
